<resources>
    <string name="Logout">Выход</string>
    <string name="edit_password">Изменить пароль</string>
    <string name="sign_in">Вход</string>
    <string name="welcome">Пожалуй, лучший фитнес трекер в ДВФУ</string>
    <string name="politik_confidents">Нажимая на кнопку, вы соглашаетесь с <a href="https://example.com/privacy">политикой конфиденциальности</a> и <a href="https://example.com/data_processing">обработки персональных данных</a>, а также принимаете <a href="https://example.com/terms">пользовательское соглашение</a>.</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="sex_none">Другое</string>
    <string name="sex_female">Женский</string>
    <string name="sex_male">Мужской</string>
    <string name="sex">Пол</string>
    <string name="repeatpassword">Повторите пароль</string>
    <string name="password">Пароль</string>
    <string name="nameornickname">Имя или Никнейм</string>
    <string name="login">Логин</string>
    <string name="app_name">Fefufit</string>
</resources>